litmask/tests/compile/maskfmt_positional_after_named.stderr
error: positional arguments must precede named arguments in maskfmt!
  --> tests/compile/maskfmt_positional_after_named.rs:10:44
   |
10 |     let _ = maskfmt!("{} {x}", "a", x = 1, "b");
   |                                            ^^^
